# oracle

./: .gitignore  Caddyfile  LICENSE  QUICK_REFERENCE.md  README.md  YAHOO_QUICKSTART.md  compose.yml  docker-compose.yml  env.example  env.frontend.example  package-lock.json  package.json  server.js  start.sh  test_data_integration.py  test_oauth.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: draft.py  players.py  recommendations.py  team.py  yahoo.py
backend/app/core/: analytics.py  config.py
backend/app/oauth/: routes.py  yahoo_oauth.py
backend/app/routers/: draft.py
backend/app/services/: data_mapper.py  player_data_service.py  recommender.py  yahoo_client.py  yahoo_fantasy.py
backend/app/tasks/: celery_app.py  jobs.py  periodic.py
docs/: API.md  ARCHITECTURE.md  COMPLETE_GUIDE.md  DATA_INTEGRATION_COMPLETE.md  DRAFT_QUICK_START.md  ENDPOINTS_GUIDE.md  GETTING_STARTED.md  PROJECT_SUMMARY.md  YAHOO_INTEGRATION_COMPLETE.md  YAHOO_OAUTH_SETUP.md
fantasy-ui/: package-lock.json  package.json  tailwind.config.ts
fantasy-ui/src/app/: globals.css  layout.tsx  page.tsx
fantasy-ui/src/components/: PuntToggles.tsx
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/: App.jsx  index.css
frontend/src/app/: page.tsx
frontend/src/components/: ConnectYahoo.tsx  Layout.jsx  Nav.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.jsx  DraftMode.jsx  (+3 more)
(+4 files in other folders)
